--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-firebase/firestore": "^17.3.1",
     "@react-native-firebase/messaging": "^17.3.1",
+    "@react-native-firebase/storage": "^17.3.1",
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.6",
@@ -29,6 +30,7 @@
     "react": "18.1.0",
     "react-native": "^0.70.6",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-picker": "^5.1.0",
     "react-native-paper": "^5.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
