--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.3.3",
     "color-convert": "^2.0.1",
     "deepmerge": "^4.3.0",
+    "express": "^4.18.2",
     "firebase": "^9.17.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
