--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "deepmerge": "^4.3.0",
     "express": "^4.18.2",
     "firebase": "^9.17.1",
+    "firebase-admin": "^11.5.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.1.0",
