--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
