11:16 am add webrtc

--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
-    "react-native-video-player": "^0.14.0"
+    "react-native-video-player": "^0.14.0",
+    "react-native-webrtc": "^106.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
